--- a/.example.env
+++ b/.example.env
@@ -17,5 +17,11 @@ SERVER_TELEGRAM_ADMIN_KEY=""        # any random characters
 # Per-operator
 WAVS_OPERATOR_TELEGRAM_BOT_TOKEN=""
 
+# Per-aggregator (may be the same as server settings)
+WAVS_AGGREGATOR_TELEGRAM_BOT_TOKEN=""
+WAVS_AGGREGATOR_TELEGRAM_GROUP_ID=""
+
+
+
 # Optional - only needed for local testing with ngrok via the `task backend:ngrok` command
 NGROK_URL=""
