--- a/packages/components/operator/commander/Cargo.toml
+++ b/packages/components/operator/commander/Cargo.toml
@@ -1,16 +1,20 @@
 [package]
-name = "tg-component-aggregator"
+name = "tg-component-operator-commander"
 edition.workspace = true
 version.workspace = true
 authors.workspace = true
 rust-version.workspace = true
 repository.workspace = true
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
 tg-utils = { workspace = true, features = ["wasi"] }
 tg-contract-api = { workspace = true }
 layer-climb = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 bincode = { workspace = true }
 anyhow = { workspace = true }
 wstd = { workspace = true }
@@ -20,6 +24,4 @@ thiserror = { workspace = true }
 cosmwasm-std = { workspace = true }
 wavs-types = {workspace = true}
 wit-bindgen = {workspace = true}
-
-[lib]
-crate-type = ["cdylib"]
+cfg-if = {workspace = true}
