--- a/packages/components/shared/Cargo.toml
+++ b/packages/components/shared/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tg-component-operator"
+name = "tg-components-shared"
 edition.workspace = true
 version.workspace = true
 authors.workspace = true
@@ -7,7 +7,7 @@ rust-version.workspace = true
 repository.workspace = true
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 tg-utils = { workspace = true, features = ["wasi"] }
