--- a/backend/docker/wavs-aggregator.yml
+++ b/backend/docker/wavs-aggregator.yml
@@ -6,7 +6,7 @@ services:
     stop_signal: SIGKILL
     environment:
       - WAVS_AGGREGATOR_COSMOS_CREDENTIAL=${WAVS_AGGREGATOR_COSMOS_CREDENTIAL:-}
-      - WAVS_ENV_AGGREGATOR_TELEGRAM_BOT_TOKEN=${WAVS_ENV_AGGREGATOR_TELEGRAM_BOT_TOKEN:-}
+      - WAVS_ENV_SERVER_SECRET=${WAVS_ENV_SERVER_SECRET:-}
       - RUST_LOG=${WAVS_LOG_LEVEL:-}
       - WAVS_AGGREGATOR_LOG_LEVEL=${WAVS_LOG_LEVEL:-}
     command:
