--- a/backend/wavs-home/wavs.toml
+++ b/backend/wavs-home/wavs.toml
@@ -19,6 +19,14 @@ grpc_endpoint = "http://localhost:9090"
 gas_price = 0.025
 gas_denom = "untrn"
 
+# This is production network for real deploy
+[default.chains.cosmos.neutron-1]
+bech32_prefix = "neutron"
+rpc_endpoint = "https://rpc-vertexa.neutron-1.neutron.org:443"
+grpc_endpoint = "http://grpc-lb.neutron.org:80"
+gas_price = 0.025
+gas_denom = "untrn"
+
 # ----------------------------
 # WAVS specific settings
 # ----------------------------
